# Old_Betsy

./: .gitignore  .gitmodules  CodeStandard.md  README.md  TODO.md
Assets/Animations/: CH_CatAndMouse.anims  CH_Cat_01.anims  CH_Cat_Idle_01.fbx  CH_Cat_Mouse_Event.fbx  CH_Cat_Run.fbx  CH_Cat_Walk_01.fbx  CH_Cat_eventSleep_01.fbx  CH_Cat_eventWalk_01.fbx  CH_Chick_01.anims  CH_Chick_02.anims  CH_Chick_Exit_01.fbx  CH_Chick_Exit_02.fbx  CH_Chick_Idle_01.fbx  CH_Chick_Idle_02.fbx  CH_Chick_Spawn_01.fbx  CH_Chick_Spawn_02.fbx  CH_Fish_01.anims  CH_Fish_02.anims  CH_Fish_03.anims  CH_Fish_Exit_01.fbx  CH_Fish_Exit_02.fbx  CH_Fish_Idle_01.fbx  CH_Fish_Idle_02.fbx  CH_Fish_Idle_03.fbx  CH_Fish_Spawn_01.fbx  CH_Fish_Spawn_02.fbx  CH_Hen_Idle_01.fbx  CH_Hen_PickIdle_01.fbx  CH_Hen_WalkcycleFunk_01.fbx  CH_Hen_Walkcycle_01.fbx  CH_Hen_WorldAnimation_01.fbx  CH_Player_Action_Harvest.fbx  (+106 more)
Pre_cmake/: .gitignore  LICENSE  README.md
Source/: Cxx17.props  ExeBuild.props  GamlaBettan.sln  IgnoreCXX17Depricationwarning.props  Includes.props  LibraryBuild.props  OpenSSLDepend.props  OpenSSLInclude.props  SharedPCH.props  ZmSwitch.props
cmake/: CMakeLists.txt  versionConfig.h.in
cmake/common/: Macros.h  WindowsIncludeWrapper.h
cmake/data/Assets/Models/Quaternius/: LICENCE
cmake/data/Assets/Shaders/: Buffers.hlsli  DeferredShaderStructs.hlsli  ParticleShaderStructs.hlsli  Sampling.hlsli  ShaderStructs.hlsli  SpriteShaderStructs.hlsli  Textures.hlsli
cmake/data/Assets/Shaders/pixel/: FlatColor.hlsl  Skybox.hlsl  Sprite_Debug.hlsl  White.hlsl
cmake/data/Assets/Shaders/pixel/deferred/: Deferred.hlsl  Deferred_Backfacing.hlsl
cmake/data/Assets/Shaders/pixel/fullscreen/: ConditionalGaussianHorizontal.hlsl  ConditionalGaussianVertical.hlsl  Copy.hlsl  DiscardFull.hlsl  EdgeDetection.hlsl  GaussianHorizontal.hlsl  GaussianVertical.hlsl  Lumiance.hlsl  Merge.hlsl
cmake/data/Assets/Shaders/pixel/fullscreen_deferred/: PBRPoint.hlsl  SSAO.hlsl  ToonShader.hlsl
cmake/data/Assets/Shaders/vertex/: Fullscreen.hlsl  Model.hlsl  Particle.hlsl  PassThrough.hlsl  Skybox.hlsl  Sprite.hlsl
cmake/data/Assets/Textures/engine/: NoImage.dds  error.dds
cmake/data/Icons/: LICENCE
cmake/data/baked/shaders/ps_5_0/fullscreen/: Clouds.cso  ConditionalGaussianHorizontal.cso  ConditionalGaussianVertical.cso  Copy.cso  DiscardFull.cso  EdgeDetection.cso  GaussianHorizontal.cso  GaussianVertical.cso  Lumiance.cso  Merge.cso  SSAO.cso
cmake/data/baked/shaders/ps_5_0/fullscreen_deferred/: PBRPoint.cso  PBRspot.cso  ToonShader.cso
cmake/data/baked/shaders/vs_5_0/: Fullscreen.cso
cmake/demo_game1/: Actions.h  CMakeLists.txt  Demo_game1.cpp  Demo_game1.h  ReadMe.md  config.h.in  main.cpp
cmake/engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  ImguiManager.cpp  ImguiManager.h  ImguiWindow.cpp  ImguiWindow.h  IncrementMajor.bat  IncrementMinor.bat  IncrementPatch.bat  QuickStart.md  Quickstart.md  ReadMe.md  SettingsManager.cpp  SettingsManager.h  Time.cpp  Time.h  Version.txt  config.h.in  pch.h
cmake/engine/assets/: AnimationData.cpp  AnimationData.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelLoader.cpp  ModelLoader.h  PointLight.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderFlags.h  ShaderTypes.cpp  ShaderTypes.h  TextureLoader.cpp  TextureLoader.h
cmake/engine/graph/: BuiltNode.cpp  BuiltNode.h  Dependable.cpp  Dependable.h  DrawablePinBlock.cpp  DrawablePinBlock.h  Graph.cpp  Graph.h  InstancedNodeData.cpp  InstancedNodeData.h  Node.h  NodeData.cpp  NodeData.h  NodeInstance.cpp  NodeInstance.h  NodeInstanceDataCollection.h  NodeInstanceId.h  NodeManager.cpp  NodeManager.h  NodePin.cpp  NodePin.h  NodeRegistration.h  PinConstant.cpp  PinConstant.h  PinValue.cpp  PinValue.h
cmake/engine/graph/nodes/: ImageNode.cpp  ImageNode.h  MulNode.h  RenderCopyNode.cpp  RenderCopyNode.h  RenderDeferredNode.cpp  RenderDeferredNode.h  RenderGeometryNode.cpp  RenderGeometryNode.h  RenderMergeNode.cpp  RenderMergeNode.h  TestNodes.cpp  TestNodes.h
cmake/engine/graphics/: BoneBuffer.h  Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  DepthRenderer.h  Environmentlight.h  ForwardRenderer.cpp  ForwardRenderer.h  FullscreenRenderer.cpp  FullscreenRenderer.h  GBuffer.cpp  GBuffer.h  GraphicEngine.cpp  GraphicEngine.h  GraphicsFramework.cpp  GraphicsFramework.h  ModelLoader.cpp  ModelLoader.h  Releasable.h  RenderManager.cpp  RenderManager.h  RenderScene.cpp  RenderScene.h  RenderStateManager.cpp  RenderStateManager.h  ShaderBuffers.h  ShaderMappings.h  Texture.cpp  Texture.h  TextureFactory.cpp  TextureFactory.h  WindowManager.cpp  WindowManager.h
cmake/engine/utilities/: ImGuiThreeAxisControl.cpp  ImGuiThreeAxisControl.h  StopWatch.h
cmake/fuzzers/: CMakeLists.txt
cmake/fuzzers/fuzz-fiskjson/: CMakeLists.txt  main.cpp  runFiskJsonFuzzer.bat
cmake/imgui/: CMakeLists.txt  CustomWidgets.cpp  CustomWidgets.h  WindowControl.cpp  WindowControl.h  config.h.in  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_tables.cpp  imgui_widgets.cpp
cmake/imgui/backend/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h
cmake/launcher/: CMakeLists.txt  config.h.in  main.cpp
cmake/logger/: CMakeLists.txt  Logger.cpp  Logger.h  config.h.in
cmake/tools/: AABB3D.h  CMakeLists.txt  DereferencingIteratorWrapper.h  Event.h  ExecuteOnDestruct.cpp  ExecuteOnDestruct.h  FileHelpers.cpp  FileHelpers.h  FiskJSON.cpp  FiskJSON.h  FiskJSONCustomTypes.h  FloatCompare.h  Frustum.h  Functors.h  ImGuiHelpers.cpp  ImGuiHelpers.h  Intersection.h  JSON.cpp  JSON.h  JSONCustomTypes.h  Literals.cpp  Literals.h  LockedResource.h  MathVector.h  Matrix3x3.h  Matrix4x4.h  NameThread.cpp  NameThread.h  Plane.h  PlaneVolume.h  Ray.h  Singleton.h  Solver.cpp  Solver.h  Sphere.h  Stopwatch.h  StringManipulation.cpp  StringManipulation.h  SubsystemManager.cpp  SubsystemManager.h  (+5 more)
cmake/unit_tests/: CMakeLists.txt
cmake/unit_tests/test-fiskjson/: CMakeLists.txt  main.cpp
cmake/unit_tests/test-tools/: CMakeLists.txt  main.cpp
(+2341 files in other folders)
