
list(APPEND SOURCE_FILES "graphics/GraphicEngine.h")
list(APPEND SOURCE_FILES "graphics/GraphicEngine.cpp")
list(APPEND SOURCE_FILES "graphics/ModelLoader.h")
list(APPEND SOURCE_FILES "graphics/ModelLoader.cpp")
list(APPEND SOURCE_FILES "graphics/WindowManager.h")
list(APPEND SOURCE_FILES "graphics/WindowManager.cpp")
list(APPEND SOURCE_FILES "graphics/GraphicsFramework.h")
list(APPEND SOURCE_FILES "graphics/GraphicsFramework.cpp")
list(APPEND SOURCE_FILES "graphics/RenderManager.h")
list(APPEND SOURCE_FILES "graphics/RenderManager.cpp")
list(APPEND SOURCE_FILES "graphics/GBuffer.h")
list(APPEND SOURCE_FILES "graphics/GBuffer.cpp")
list(APPEND SOURCE_FILES "graphics/Texture.h")
list(APPEND SOURCE_FILES "graphics/Texture.cpp")
list(APPEND SOURCE_FILES "graphics/TextureFactory.h")
list(APPEND SOURCE_FILES "graphics/TextureFactory.cpp")
list(APPEND SOURCE_FILES "graphics/FullscreenRenderer.h")
list(APPEND SOURCE_FILES "graphics/FullscreenRenderer.cpp")
list(APPEND SOURCE_FILES "graphics/RenderStateManager.h")
list(APPEND SOURCE_FILES "graphics/RenderStateManager.cpp")
list(APPEND SOURCE_FILES "graphics/BoneBuffer.h")
list(APPEND SOURCE_FILES "graphics/RenderScene.cpp")
list(APPEND SOURCE_FILES "graphics/RenderScene.h")
list(APPEND SOURCE_FILES "graphics/Camera.cpp")
list(APPEND SOURCE_FILES "graphics/Camera.h")

list(APPEND SOURCE_FILES "assets/ShaderFlags.h")
list(APPEND SOURCE_FILES "assets/ShaderCompiler.h")
list(APPEND SOURCE_FILES "assets/ShaderCompiler.cpp")
list(APPEND SOURCE_FILES "assets/ShaderTypes.h")
list(APPEND SOURCE_FILES "assets/ShaderTypes.cpp")
list(APPEND SOURCE_FILES "assets/Asset.h")
list(APPEND SOURCE_FILES "assets/Asset.cpp")
list(APPEND SOURCE_FILES "assets/AssetManager.h")
list(APPEND SOURCE_FILES "assets/AssetManager.cpp")
list(APPEND SOURCE_FILES "assets/ModelInstance.h")
list(APPEND SOURCE_FILES "assets/ModelInstance.cpp")
list(APPEND SOURCE_FILES "assets/Model.h")
list(APPEND SOURCE_FILES "assets/Model.cpp")
list(APPEND SOURCE_FILES "assets/AnimationData.h")
list(APPEND SOURCE_FILES "assets/AnimationData.cpp")
list(APPEND SOURCE_FILES "assets/PointLight.h")

list(APPEND SOURCE_FILES "graph/PinValue.cpp")
list(APPEND SOURCE_FILES "graph/PinValue.h")
list(APPEND SOURCE_FILES "graph/Node.h")
list(APPEND SOURCE_FILES "graph/NodePin.cpp")
list(APPEND SOURCE_FILES "graph/NodePin.h")
list(APPEND SOURCE_FILES "graph/NodeInstanceId.h")
list(APPEND SOURCE_FILES "graph/NodeManager.h")
list(APPEND SOURCE_FILES "graph/NodeManager.cpp")
list(APPEND SOURCE_FILES "graph/NodeRegistration.h")

list(APPEND SOURCE_FILES "graph/Nodes/RenderCopyNode.h")
list(APPEND SOURCE_FILES "graph/Nodes/RenderCopyNode.cpp")

list(APPEND SOURCE_FILES "GameEngine.h")
list(APPEND SOURCE_FILES "GameEngine.cpp")
list(APPEND SOURCE_FILES "SettingsManager.h")
list(APPEND SOURCE_FILES "SettingsManager.cpp")

project(Engine VERSION 1.0.1)
list(APPEND SOURCE_FILES "${PROJECT_BINARY_DIR}/config.h")

add_library(Engine "${SOURCE_FILES}")

configure_file(config.h.in config.h)
target_include_directories(Engine PUBLIC ${CMAKE_SOURCE_DIR})
target_include_directories(Engine PUBLIC ${CMAKE_BINARY_DIR})